# photo-of-the-day

./: README.md  alembic_notes.md  pyproject.toml
photoapp/: .env-template  docker-compose.yml  main.py
photoapp/alembic/: env.py
photoapp/alembic/versions/: 2025_04_01_1513-9b1e5cfbf687_created_posts_and_user_tables.py
photoapp/api/: __init__.py  posts.py  users.py
photoapp/config/: settings.py
photoapp/crud/: posts.py  users.py
photoapp/models/: __init__.py  base.py  database_manager.py  post.py  user.py
photoapp/models/mixins/: id_int_pk.py
photoapp/schemas/: post.py  user.py
